{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 141,
  "lineage": "931daf92-6ed9-c945-4528-d222ce545d40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090717c950a5c34d3",
            "arn": "arn:aws:ec2:us-west-2:629659481099:instance/i-06c8a9f4072edee26",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c8a9f4072edee26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-057e7c34698614add",
            "private_dns": "ip-10-10-0-18.us-west-2.compute.internal",
            "private_ip": "10.10.0.18",
            "public_ip": "52.89.78.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b562acb9190be0f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069e2e692f17b8437",
            "tags": {
              "Name": "webserver1"
            },
            "tags_all": {
              "Name": "webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d30d6efd7105f75b"
            ]
          },
          "dependencies": [
            "aws_security_group.web_subnet_sg",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ntier-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:internet-gateway/igw-0868cc302d0475ab1",
            "id": "igw-0868cc302d0475ab1",
            "owner_id": "629659481099",
            "tags": {
              "Name": "ntier-igw"
            },
            "tags_all": {
              "Name": "ntier-igw"
            },
            "vpc_id": "vpc-0e516cb4a98aed5ac"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "niter-publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0868cc302d0475ab1",
            "id": "r-rtb-039364c838d180b791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039364c838d180b79",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ntier-igw",
            "aws_route_table.ntier-publicrt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ntier-publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:route-table/rtb-039364c838d180b79",
            "id": "rtb-039364c838d180b79",
            "owner_id": "629659481099",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ntier-publicrt"
            },
            "tags_all": {
              "Name": "ntier-publicrt"
            },
            "vpc_id": "vpc-0e516cb4a98aed5ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_subnets_assiocate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1b66aa368fea2a7",
            "route_table_id": "rtb-039364c838d180b79",
            "subnet_id": "subnet-069e2e692f17b8437"
          },
          "dependencies": [
            "aws_route_table.ntier-publicrt",
            "aws_subnet.subnets",
            "aws_vpc.ntiervpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adab14679d2a94cf",
            "route_table_id": "rtb-039364c838d180b79",
            "subnet_id": "subnet-05e4b44a7e1f56669"
          },
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.ntiervpc",
            "aws_route_table.ntier-publicrt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_subnet_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:security-group/sg-0d30d6efd7105f75b",
            "description": "this for web subnet gs",
            "egress": [],
            "id": "sg-0d30d6efd7105f75b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "openhttps",
            "name_prefix": "",
            "owner_id": "629659481099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_subnet_sg"
            },
            "tags_all": {
              "Name": "web_subnet_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e516cb4a98aed5ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "websghttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2614918400",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d30d6efd7105f75b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_subnet_sg",
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "websgssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-760619189",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d30d6efd7105f75b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_subnet_sg",
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:subnet/subnet-069e2e692f17b8437",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-069e2e692f17b8437",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629659481099",
            "tags": {
              "Name": "ntier-web1"
            },
            "tags_all": {
              "Name": "ntier-web1"
            },
            "vpc_id": "vpc-0e516cb4a98aed5ac"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:subnet/subnet-00e96ed129b31cfdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-00e96ed129b31cfdd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629659481099",
            "tags": {
              "Name": "ntier-app1"
            },
            "tags_all": {
              "Name": "ntier-app1"
            },
            "vpc_id": "vpc-0e516cb4a98aed5ac"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:subnet/subnet-08f362095f0342b13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-08f362095f0342b13",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629659481099",
            "tags": {
              "Name": "ntier-db1"
            },
            "tags_all": {
              "Name": "ntier-db1"
            },
            "vpc_id": "vpc-0e516cb4a98aed5ac"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:subnet/subnet-05e4b44a7e1f56669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-05e4b44a7e1f56669",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629659481099",
            "tags": {
              "Name": "ntier-web2"
            },
            "tags_all": {
              "Name": "ntier-web2"
            },
            "vpc_id": "vpc-0e516cb4a98aed5ac"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:subnet/subnet-06be47403a8b6949f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-06be47403a8b6949f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629659481099",
            "tags": {
              "Name": "ntier-app2"
            },
            "tags_all": {
              "Name": "ntier-app2"
            },
            "vpc_id": "vpc-0e516cb4a98aed5ac"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:subnet/subnet-0c90a25aa436c6415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.5.0/24",
            "id": "subnet-0c90a25aa436c6415",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629659481099",
            "tags": {
              "Name": "ntier-db3"
            },
            "tags_all": {
              "Name": "ntier-db3"
            },
            "vpc_id": "vpc-0e516cb4a98aed5ac"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ntiervpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:629659481099:vpc/vpc-0e516cb4a98aed5ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e50d8725e8af02bf",
            "default_route_table_id": "rtb-022c5ff5bede929e3",
            "default_security_group_id": "sg-0620a278a9a6ec828",
            "dhcp_options_id": "dopt-b5cd92cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e516cb4a98aed5ac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-022c5ff5bede929e3",
            "owner_id": "629659481099",
            "tags": {
              "Name": "ntier"
            },
            "tags_all": {
              "Name": "ntier"
            }
          }
        }
      ]
    }
  ]
}